--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -1,4 +1,4 @@
-<div class="slimScrollDiv" style="position: relative; overflow: hidden; width: auto; height: 539px;"><div id="sidebar-scroll" style="overflow: hidden; width: auto; height: 539px;">
+<div id="sidebar-scroll">
     <!-- Sidebar Content -->
     <!-- Adding .sidebar-mini-hide to an element will hide it when the sidebar is in mini mode -->
     <div class="sidebar-content">
@@ -14,7 +14,7 @@
                     <i class="si si-drop"></i>
                 </button>
                 <ul class="dropdown-menu dropdown-menu-right font-s13 sidebar-mini-hide">
-                    <li class="active">
+                    <li>
                         <a data-toggle="theme" data-theme="default" tabindex="-1" href="javascript:void(0)">
                             <i class="fa fa-circle text-default pull-right"></i> <span class="font-w600">Default</span>
                         </a>
@@ -158,7 +158,7 @@
                     </ul>
                 </li>
                 <li class="nav-main-heading"><span class="sidebar-mini-hide">Develop</span></li>
-                <li>
+                <li class="open">
                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wrench"></i><span class="sidebar-mini-hide">Components</span></a>
                     <ul>
                         <li>
@@ -177,7 +177,7 @@
                             <a href="base_comp_maps.html">Maps</a>
                         </li>
                         <li>
-                            <a href="base_comp_animations.html">Animations</a>
+                            <a class="active" href="base_comp_animations.html">Animations</a>
                         </li>
                         <li>
                             <a href="base_comp_syntax_highlighting.html">Syntax Highlighting</a>
@@ -294,7 +294,7 @@
                     </ul>
                 </li>
                 <li class="nav-main-heading"><span class="sidebar-mini-hide">Pages</span></li>
-                <li class="open">
+                <li>
                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-layers"></i><span class="sidebar-mini-hide">Generic</span></a>
                     <ul>
                         <li>
@@ -304,7 +304,7 @@
                             <a href="base_pages_profile.html">User Profile</a>
                         </li>
                         <li>
-                            <a class="active" href="base_pages_search.html">Search Results</a>
+                            <a href="base_pages_search.html">Search Results</a>
                         </li>
                         <li>
                             <a href="base_pages_invoice.html">Invoice</a>
@@ -364,4 +364,4 @@
         <!-- END Side Content -->
     </div>
     <!-- Sidebar Content -->
-</div><div class="slimScrollBar" style="width: 5px; position: absolute; top: 0px; opacity: 0.35; display: none; border-radius: 7px; z-index: 99; right: 2px; height: 282.608px; background: rgb(255, 255, 255);"></div><div class="slimScrollRail" style="width: 5px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; opacity: 1; z-index: 90; right: 2px; background: rgb(51, 51, 51);"></div></div>
+</div>
