--- a/templates/header.html
+++ b/templates/header.html
@@ -1,12 +1,11 @@
 <div>
-
     <!-- <ul class="nav-header pull-left"> -->
     <ul class="nav-header pull-left">
         <li><a href="#">首页</a></li>
         <li><a href="#">内容管理</a></li>
         <li><a href="#">会员管理</a></li>
         <li><a href="#">装修管理</a></li>
-        <li><a href="#">供应商管理</a></li>
+        <li><a ui-sref="dashboard.provider">供应商管理</a></li>
         <li><a href="#">财务管理</a></li>
         <li><a href="#">申诉管理</a></li>
     </ul>
