--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -4,50 +4,10 @@
     <div class="sidebar-content">
         <!-- Side Header -->
         <div class="side-header side-content bg-white-op">
-            <!-- Layout API, functionality initialized in App() -> uiLayoutApi() -->
-            <button class="btn btn-link text-gray pull-right hidden-md hidden-lg" type="button" data-toggle="layout" data-action="sidebar_close">
-                <i class="fa fa-times"></i>
-            </button>
-            <!-- Themes functionality initialized in App() -> uiHandleTheme() -->
-            <div class="btn-group pull-right">
-                <button class="btn btn-link text-gray dropdown-toggle" data-toggle="dropdown" type="button">
-                    <i class="si si-drop"></i>
-                </button>
-                <ul class="dropdown-menu dropdown-menu-right font-s13 sidebar-mini-hide">
-                    <li>
-                        <a data-toggle="theme" data-theme="default" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-default pull-right"></i> <span class="font-w600">Default</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a data-toggle="theme" data-theme="assets/css/themes/amethyst.min.css" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-amethyst pull-right"></i> <span class="font-w600">Amethyst</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a data-toggle="theme" data-theme="assets/css/themes/city.min.css" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-city pull-right"></i> <span class="font-w600">City</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a data-toggle="theme" data-theme="assets/css/themes/flat.min.css" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-flat pull-right"></i> <span class="font-w600">Flat</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a data-toggle="theme" data-theme="assets/css/themes/modern.min.css" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-modern pull-right"></i> <span class="font-w600">Modern</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a data-toggle="theme" data-theme="assets/css/themes/smooth.min.css" tabindex="-1" href="javascript:void(0)">
-                            <i class="fa fa-circle text-smooth pull-right"></i> <span class="font-w600">Smooth</span>
-                        </a>
-                    </li>
-                </ul>
-            </div>
+
+
             <a class="h5 text-white" href="index.html">
-                <i class="fa fa-circle-o-notch text-primary"></i> <span class="h4 font-w600 sidebar-mini-hide">ne</span>
+                 <span class="h4 font-w600 sidebar-mini-hide">锋尚生命屋</span>
             </a>
         </div>
         <!-- END Side Header -->
@@ -56,34 +16,19 @@
         <div class="side-content">
             <ul class="nav-main">
                 <li>
-                    <a href="index.html"><i class="si si-speedometer"></i><span class="sidebar-mini-hide">Dashboard</span></a>
+                    <a href="index.html"><i class="si si-speedometer"></i><span class="sidebar-mini-hide">首页</span></a>
                 </li>
-                <li class="nav-main-heading"><span class="sidebar-mini-hide">User Interface</span></li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-badge"></i><span class="sidebar-mini-hide">UI Elements</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-badge"></i><span class="sidebar-mini-hide">内容管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_ui_widgets.html">Widgets</a>
+                            <a href="base_ui_widgets.html">文章管理</a>
                         </li>
                         <li>
-                            <a class="nav-submenu" data-toggle="nav-submenu" href="#">Blocks</a>
-                            <ul>
-                                <li>
-                                    <a href="base_ui_blocks.html">Styles</a>
-                                </li>
-                                <li>
-                                    <a href="base_ui_blocks_api.html">Blocks API</a>
-                                </li>
-                                <li>
-                                    <a href="base_ui_blocks_draggable.html">Draggable</a>
-                                </li>
-                            </ul>
+                            <a href="base_ui_grid.html">培训管理</a>
                         </li>
                         <li>
-                            <a href="base_ui_grid.html">Grid</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_typography.html">Typography</a>
+                            <a href="base_ui_typography.html">规章制度</a>
                         </li>
                         <li>
                             <a href="base_ui_icons.html">Icons</a>
