sideBar.html change, header.html change

--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -30,279 +30,80 @@
                         <li>
                             <a href="base_ui_typography.html">规章制度</a>
                         </li>
+                    </ul>
+                </li>
+                <li>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-grid"></i><span class="sidebar-mini-hide">会员管理</span></a>
+                    <ul>
                         <li>
-                            <a href="base_ui_icons.html">Icons</a>
+                            <a href="base_tables_styles.html">业主管理</a>
                         </li>
                         <li>
-                            <a href="base_ui_buttons.html">Buttons</a>
+                            <a href="base_tables_responsive.html">服务人员</a>
                         </li>
                         <li>
-                            <a href="base_ui_activity.html">Activity</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_tabs.html">Tabs</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_tiles.html">Tiles</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_timeline.html">Timeline</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_navigation.html">Navigation</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_modals_tooltips.html">Modals &amp; Tooltips</a>
-                        </li>
-                        <li>
-                            <a href="base_ui_color_themes.html">Color Themes</a>
+                            <a href="base_tables_tools.html">会员审核</a>
                         </li>
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-grid"></i><span class="sidebar-mini-hide">Tables</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-note"></i><span class="sidebar-mini-hide">装修管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_tables_styles.html">Styles</a>
-                        </li>
-                        <li>
-                            <a href="base_tables_responsive.html">Responsive</a>
-                        </li>
-                        <li>
-                            <a href="base_tables_tools.html">Tools</a>
-                        </li>
-                        <li>
-                            <a href="base_tables_pricing.html">Pricing</a>
-                        </li>
-                        <li>
-                            <a href="base_tables_datatables.html">DataTables</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-note"></i><span class="sidebar-mini-hide">Forms</span></a>
-                    <ul>
-                        <li>
-                            <a href="base_forms_premade.html">Pre-made</a>
-                        </li>
-                        <li>
-                            <a href="base_forms_elements.html">Elements</a>
-                        </li>
-                        <li>
-                            <a href="base_forms_pickers_more.html">Pickers &amp; More</a>
-                        </li>
-                        <li>
-                            <a href="base_forms_editors.html">Text Editors</a>
-                        </li>
-                        <li>
-                            <a href="base_forms_validation.html">Validation</a>
-                        </li>
-                        <li>
-                            <a href="base_forms_wizard.html">Wizard</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="nav-main-heading"><span class="sidebar-mini-hide">Develop</span></li>
-                <li class="open">
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wrench"></i><span class="sidebar-mini-hide">Components</span></a>
-                    <ul>
-                        <li>
-                            <a href="base_comp_images.html">Images</a>
-                        </li>
-                        <li>
-                            <a href="base_comp_charts.html">Charts</a>
-                        </li>
-                        <li>
-                            <a href="base_comp_calendar.html">Calendar</a>
-                        </li>
-                        <li>
-                            <a href="base_comp_sliders.html">Sliders</a>
-                        </li>
-                        <li>
-                            <a href="base_comp_maps.html">Maps</a>
-                        </li>
-                        <li>
-                            <a class="active" href="base_comp_animations.html">Animations</a>
-                        </li>
-                        <li>
-                            <a href="base_comp_syntax_highlighting.html">Syntax Highlighting</a>
-                        </li>
-                        <li>
-                            <a class="nav-submenu" data-toggle="nav-submenu" href="#">Gallery</a>
+                            <a class="nav-submenu" data-toggle="nav-submenu">装修管理</a>
                             <ul>
-                                <li>
-                                    <a href="base_comp_gallery_simple.html">Simple</a>
-                                </li>
-                                <li>
-                                    <a href="base_comp_gallery_advanced.html">Advanced</a>
-                                </li>
+                                <li><a>装修订单</a></li>
+                                <li><a>退换货订单</a></li>
                             </ul>
                         </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-magic-wand"></i><span class="sidebar-mini-hide">Layouts</span></a>
-                    <ul>
                         <li>
-                            <a href="base_layouts_api.html">Layout API</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_default.html">Default</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_default_flipped.html">Default Flipped</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_header_static.html">Static Header</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_sidebar_mini_hoverable.html">Mini Sidebar (Hoverable)</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_side_overlay_hoverable.html">Side Overlay (Hoverable)</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_side_overlay_open.html">Side Overlay (Open)</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_side_native_scrolling.html">Side Native Scrolling</a>
-                        </li>
-                        <li>
-                            <a href="base_layouts_sidebar_hidden.html">Hidden Sidebar</a>
-                        </li>
-                    </ul>
-                </li>
-                <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-puzzle"></i><span class="sidebar-mini-hide">Multi Level Menu</span></a>
-                    <ul>
-                        <li>
-                            <a href="#">Link 1-1</a>
-                        </li>
-                        <li>
-                            <a href="#">Link 1-2</a>
-                        </li>
-                        <li>
-                            <a class="nav-submenu" data-toggle="nav-submenu" href="#">Sub Level 2</a>
+                            <a class="nav-submenu" data-toggle="nav-submenu">商品管理</a>
                             <ul>
-                                <li>
-                                    <a href="#">Link 2-1</a>
-                                </li>
-                                <li>
-                                    <a href="#">Link 2-2</a>
-                                </li>
-                                <li>
-                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#">Sub Level 3</a>
-                                    <ul>
-                                        <li>
-                                            <a href="#">Link 3-1</a>
-                                        </li>
-                                        <li>
-                                            <a href="#">Link 3-2</a>
-                                        </li>
-                                        <li>
-                                            <a class="nav-submenu" data-toggle="nav-submenu" href="#">Sub Level 4</a>
-                                            <ul>
-                                                <li>
-                                                    <a href="#">Link 4-1</a>
-                                                </li>
-                                                <li>
-                                                    <a href="#">Link 4-2</a>
-                                                </li>
-                                                <li>
-                                                    <a class="nav-submenu" data-toggle="nav-submenu" href="#">Sub Level 5</a>
-                                                    <ul>
-                                                        <li>
-                                                            <a href="#">Link 5-1</a>
-                                                        </li>
-                                                        <li>
-                                                            <a href="#">Link 5-2</a>
-                                                        </li>
-                                                        <li>
-                                                            <a class="nav-submenu" data-toggle="nav-submenu" href="#">Sub Level 6</a>
-                                                            <ul>
-                                                                <li>
-                                                                    <a href="#">Link 6-1</a>
-                                                                </li>
-                                                                <li>
-                                                                    <a href="#">Link 6-2</a>
-                                                                </li>
-                                                            </ul>
-                                                        </li>
-                                                    </ul>
-                                                </li>
-                                            </ul>
-                                        </li>
-                                    </ul>
-                                </li>
+                                <li><a>装修订单</a></li>
+                                <li><a>退换货订单</a></li>
                             </ul>
                         </li>
+                        <li>
+                            <a >客服记录</a>
+                        </li> 
+                        <li>
+                            <a >统计分析</a>
+                        </li>                                         
+                        <li>
+                            <a class="nav-submenu" data-toggle="nav-submenu">装修配置</a>
+                            <ul>
+                                <li><a>工序配置</a></li>
+                                <li><a>工种费用</a></li>
+                                <li><a>成本配置</a></li>
+                                <li><a>合同配置</a></li>
+                            </ul>                            
+                        </li>                                        
                     </ul>
                 </li>
-                <li class="nav-main-heading"><span class="sidebar-mini-hide">Pages</span></li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-layers"></i><span class="sidebar-mini-hide">Generic</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wrench"></i><span class="sidebar-mini-hide">供应商管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_pages_blank.html">Blank</a>
+                            <a href="base_comp_images.html">供应商管理</a>
                         </li>
                         <li>
-                            <a href="base_pages_profile.html">User Profile</a>
+                            <a href="base_comp_charts.html">购订单管理</a>
                         </li>
                         <li>
-                            <a href="base_pages_search.html">Search Results</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_invoice.html">Invoice</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_faq.html">FAQ</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_inbox.html">Inbox</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_login.html">Log In</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_register.html">Register</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_lock.html">Lock Screen</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_reminder.html">Password Reminder</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_coming_soon.html">Coming Soon</a>
-                        </li>
+                            <a href="base_comp_charts.html">退换货订单管理</a>
+                        </li>                        
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-fire"></i><span class="sidebar-mini-hide">Error Pages</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-magic-wand"></i><span class="sidebar-mini-hide">财务管理</span></a>                   
+                </li>
+                <li>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-puzzle"></i><span class="sidebar-mini-hide">申诉管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_pages_400.html">400</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_401.html">401</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_403.html">403</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_404.html">404</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_500.html">500</a>
-                        </li>
-                        <li>
-                            <a href="base_pages_503.html">503</a>
+                            <a href="#">退换货申诉</a>
                         </li>
                     </ul>
-                </li>
-                <li class="nav-main-heading"><span class="sidebar-mini-hide">Apps</span></li>
-                <li>
-                    <a href="frontend_home.html"><i class="si si-rocket"></i><span class="sidebar-mini-hide">Frontend</span></a>
                 </li>
             </ul>
         </div>
