--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -61,16 +61,16 @@
                     </ul>
                 </li>
                 <li>
-                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-grid"></i><span class="sidebar-mini-hide">Tables</span></a>
+                    <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-grid"></i><span class="sidebar-mini-hide">会员管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_tables_styles.html">Styles</a>
+                            <a href="base_tables_styles.html">业主管理</a>
                         </li>
                         <li>
-                            <a href="base_tables_responsive.html">Responsive</a>
+                            <a href="base_tables_responsive.html">服务人员</a>
                         </li>
                         <li>
-                            <a href="base_tables_tools.html">Tools</a>
+                            <a href="base_tables_tools.html">会员审核</a>
                         </li>
                         <li>
                             <a href="base_tables_pricing.html">Pricing</a>
