--- a/templates/provider.html
+++ b/templates/provider.html
@@ -76,7 +76,7 @@
                             <td class="hidden-xs">13548967845</td>
                             <td class="hidden-xs">主材</td>
                             <td class="hidden-xs">重庆</td>
-                            <td class="hidden-xs"><a ui-sref="providerDetails">查看</a></td>
+                            <td class="hidden-xs"><a ui-sref="provider.details">查看</a></td>
                         </tr>
                         <tr>
                             <td class="text-center">重庆飘瑞斯特贸易有限公司</td>
