--- a/templates/provider_details.html
+++ b/templates/provider_details.html
@@ -17,23 +17,23 @@
                 <div class="block">
                     <ul class="nav nav-tabs nav-tabs-alt" data-toggle="tabs">
                         <li class="active">
-                            <a href="#btabs-animated-fade-home">供应商信息</a>
+                            <a aim="#btabs-alt-static-provider">供应商信息</a>
                         </li>
                         <li>
-                            <a href="#btabs-animated-fade-profile">供货信息</a>
+                            <a aim="#btabs-alt-static-supply">供货信息</a>
                         </li>
                         <li>
-                            <a href="#btabs-animated-fade-orders">订单信息</a>
+                            <a aim="#btabs-alt-static-orders">订单信息</a>
                         </li>
                         <li>
-                            <a href="#btabs-animated-fade-profile">退换货信息</a>
+                            <a aim="#btabs-alt-static-return">退换货信息</a>
                         </li>
                         <li>
-                            <a href="#btabs-animated-fade-profile">付款信息</a>
+                            <a aim="#btabs-alt-static-payment">付款信息</a>
                         </li>
                     </ul>
                     <div class="block-content tab-content">
-                        <div class="tab-pane fade in active" id="btabs-animated-fade-home">
+                        <div class="tab-pane active" id="btabs-alt-static-provider">
                             <table class="table table-bordered">
                                 <tbody>
                                     <tr>
@@ -70,67 +70,60 @@
                                     </tr>
                                     <tr>
                                         <th>备注</th>
-                                        <td>重庆飘瑞斯特贸易有限公司</td>
+                                        <td colspan="5">重庆飘瑞斯特贸易有限公司</td>
                                     </tr>
                                 </tbody>
                             </table>
                         </div>
-                        <div class="tab-pane fade" id="btabs-animated-fade-profile">
-
-                                <!-- Dynamic Table Full -->
-                                <div class="block">
-                                    <div class="block-content">
-                                        <table class="table table-bordered table-striped js-dataTable-full">
-                                            <thead>
-                                                <tr>
-                                                    <th class="text-center"> 商品名称</th>
-                                                    <th>商品编号</th>
-                                                    <th class="hidden-xs">商品型号</th>
-                                                    <th class="hidden-xs" style="width: 15%;">商品分类</th>
-                                                    <th class="text-center" style="width: 10%;">商品品牌</th>
-                                                    <th>商品规格</th>
-                                                    <th>商品单价</th>
-                                                    <th>操作</th>
-                                                </tr>
-                                            </thead>
-                                            <tbody>
-                                                <tr>
-                                                    <td class="text-center">手持花洒带支架软管</td>
-                                                    <td class="font-w600">SMW2016254879</td>
-                                                    <td class="hidden-xs">SDF15489-03</td>
-                                                    <td class="hidden-xs">主材-卫浴洁具</td>
-                                                    <td class="hidden-xs">诺顿</td>
-                                                    <td class="hidden-xs">15*42*16cm</td>
-                                                    <td class="hidden-xs">1465.88</td> 
-                                                    <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
-                                                </tr>
-                                               <tr>
-                                                    <td class="text-center">手持花洒带支架软管</td>
-                                                    <td class="font-w600">SMW2016254879</td>
-                                                    <td class="hidden-xs">SDF15489-03</td>
-                                                    <td class="hidden-xs">主材-卫浴洁具</td>
-                                                    <td class="hidden-xs">诺顿</td>
-                                                    <td class="hidden-xs">15*42*16cm</td>
-                                                    <td class="hidden-xs">1465.88</td> 
-                                                    <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
-                                                </tr>
-                                               <tr>
-                                                    <td class="text-center">手持花洒带支架软管</td>
-                                                    <td class="font-w600">SMW2016254879</td>
-                                                    <td class="hidden-xs">SDF15489-03</td>
-                                                    <td class="hidden-xs">主材-卫浴洁具</td>
-                                                    <td class="hidden-xs">诺顿</td>
-                                                    <td class="hidden-xs">15*42*16cm</td>
-                                                    <td class="hidden-xs">1465.88</td> 
-                                                    <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
-                                                </tr>
-                                            </tbody>
-                                        </table>
-                                    </div>
-                                </div>
-                                <!-- END Dynamic Table Full -->
+                        <div class="tab-pane" id="btabs-alt-static-supply">
+                            <table class="table table-bordered table-striped js-dataTable-full">
+                                <thead>
+                                    <tr>
+                                        <th class="text-center"> 商品名称</th>
+                                        <th>商品编号</th>
+                                        <th class="hidden-xs">商品型号</th>
+                                        <th class="hidden-xs" style="width: 15%;">商品分类</th>
+                                        <th class="text-center" style="width: 10%;">商品品牌</th>
+                                        <th>商品规格</th>
+                                        <th>商品单价</th>
+                                        <th>操作</th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    <tr>
+                                        <td class="text-center">手持花洒带支架软管</td>
+                                        <td class="font-w600">SMW2016254879</td>
+                                        <td class="hidden-xs">SDF15489-03</td>
+                                        <td class="hidden-xs">主材-卫浴洁具</td>
+                                        <td class="hidden-xs">诺顿</td>
+                                        <td class="hidden-xs">15*42*16cm</td>
+                                        <td class="hidden-xs">1465.88</td> 
+                                        <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
+                                    </tr>
+                                   <tr>
+                                        <td class="text-center">手持花洒带支架软管</td>
+                                        <td class="font-w600">SMW2016254879</td>
+                                        <td class="hidden-xs">SDF15489-03</td>
+                                        <td class="hidden-xs">主材-卫浴洁具</td>
+                                        <td class="hidden-xs">诺顿</td>
+                                        <td class="hidden-xs">15*42*16cm</td>
+                                        <td class="hidden-xs">1465.88</td> 
+                                        <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
+                                    </tr>
+                                   <tr>
+                                        <td class="text-center">手持花洒带支架软管</td>
+                                        <td class="font-w600">SMW2016254879</td>
+                                        <td class="hidden-xs">SDF15489-03</td>
+                                        <td class="hidden-xs">主材-卫浴洁具</td>
+                                        <td class="hidden-xs">诺顿</td>
+                                        <td class="hidden-xs">15*42*16cm</td>
+                                        <td class="hidden-xs">1465.88</td> 
+                                        <td class="hidden-xs"><a href="">查看</a><a href="">编辑</a><a href="">删除</a></td>
+                                    </tr>
+                                </tbody>
+                            </table>        
                         </div>
-                        <div class="tab-pane fade" id="btabs-animated-fade-orders">
+                        <div class="tab-pane" id="btabs-alt-static-orders">
                             <!-- Dynamic Table Full -->
                             <div class="block">
                                 <div class="block-content">
@@ -194,7 +187,71 @@
                             </div>
                             <!-- END Dynamic Table Full -->
                         </div>
-                        <div class="tab-pane fade" id="btabs-animated-fade-orders">
+                        <div class="tab-pane" id="btabs-alt-static-return">
+                            <!-- Dynamic Table Full -->
+                            <div class="block">
+                                <div class="block-content">
+                                    <table class="table table-bordered table-striped js-dataTable-full">
+                                        <thead>
+                                            <tr>
+                                                <th class="text-center">退换货订单号</th>
+                                                <th>订单号</th>
+                                                <th class="hidden-xs">退货时间</th>
+                                                <th class="hidden-xs" style="width: 15%;">退货人</th>
+                                                <th class="text-center" style="width: 10%;">退换货订单状态</th>
+                                                <th>所属区域</th>
+                                                <th>供应商</th>
+                                                <th>操作</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td class="text-center">SMW48575468959</td>
+                                                <td class="font-w600">SMWTHH85425155</td>
+                                                <td class="hidden-xs">2016-08-10 09：45：10</td>
+                                                <td class="hidden-xs">张佳</td>
+                                                <td class="hidden-xs">未完成</td>
+                                                <td class="hidden-xs">重庆</td>
+                                                <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                                                <td class="hidden-xs"><a href="">查看</a></td>
+                                            </tr>
+                                           <tr>
+                                                <td class="text-center">SMW48575468959</td>
+                                                <td class="font-w600">SMWTHH85425155</td>
+                                                <td class="hidden-xs">2016-08-10 09：45：10</td>
+                                                <td class="hidden-xs">张佳</td>
+                                                <td class="hidden-xs">未完成</td>
+                                                <td class="hidden-xs">重庆</td>
+                                                <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                                                <td class="hidden-xs"><a href="">查看</a></td>
+                                            </tr>
+                                           <tr>
+                                                <td class="text-center">SMW48575468959</td>
+                                                <td class="font-w600">SMWTHH85425155</td>
+                                                <td class="hidden-xs">2016-08-10 09：45：10</td>
+                                                <td class="hidden-xs">张佳</td>
+                                                <td class="hidden-xs">未完成</td>
+                                                <td class="hidden-xs">重庆</td>
+                                                <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                                                <td class="hidden-xs"><a href="">查看</a></td>
+                                            </tr>
+                                           <tr>
+                                                <td class="text-center">SMW48575468959</td>
+                                                <td class="font-w600">SMWTHH85425155</td>
+                                                <td class="hidden-xs">2016-08-10 09：45：10</td>
+                                                <td class="hidden-xs">张佳</td>
+                                                <td class="hidden-xs">未完成</td>
+                                                <td class="hidden-xs">重庆</td>
+                                                <td class="hidden-xs">重庆飘瑞斯特贸易有限公司</td> 
+                                                <td class="hidden-xs"><a href="">查看</a></td>
+                                            </tr>
+                                        </tbody>
+                                    </table>
+                                </div>
+                            </div>
+                            <!-- END Dynamic Table Full -->
+                        </div>
+                        <div class="tab-pane" id="btabs-animated-fade-return">
                             <!-- Dynamic Table Full -->
                             <div class="block">
                                 <div class="block-content">
