--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -85,7 +85,7 @@
                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-wrench"></i><span class="sidebar-mini-hide">供应商管理</span></a>
                     <ul>
                         <li>
-                            <a href="base_comp_images.html">供应商管理</a>
+                            <a ui-sref="provider">供应商管理</a>
                         </li>
                         <li>
                             <a href="base_comp_charts.html">购订单管理</a>
