--- a/templates/sideBar.html
+++ b/templates/sideBar.html
@@ -102,7 +102,7 @@
                     <a class="nav-submenu" data-toggle="nav-submenu" href="#"><i class="si si-puzzle"></i><span class="sidebar-mini-hide">申诉管理</span></a>
                     <ul>
                         <li>
-                            <a href="#">退换货申诉</a>
+                            <a ui-sref="appeal">退换货申诉</a>
                         </li>
                     </ul>
                 </li>
